Do not change the view URL if it is a symlink to the current directory

BUG: 302037
FIXED-IN: 4.10.3
REVIEW: 110233